--- a/views/partials/contact.ejs
+++ b/views/partials/contact.ejs
@@ -1,81 +1,89 @@
 <section id="contact">
-    <div class="contact main-container">
-      <div class="contact-left">
-        <div class="contact-form">
-          <form action="https://formspree.io/f/xpwanqqe" method="POST">
-            <div><input type="text" placeholder="Name" name="name" /></div>
-            <div><input type="text" placeholder="Email" name="email" /></div>
-            <div>
-              <textarea
-                name="message"
-                id="message"
-                placeholder="Message"
-                cols="30"
-                rows="10"
-              ></textarea>
-            </div>
-            <div><button class="btn-submit">Send Message</button></div>
-          </form>
+  <div class="contact main-container">
+    <div class="contact-left">
+      <form
+        action="https://formspree.io/f/xeqwdykj"
+        method="POST"
+        class="contact-form"
+      >
+        <div>
+          <input type="text" placeholder="Name" name="name" />
+        </div>
+        <div>
+          <input type="email" placeholder="Email" name="email" />
+        </div>
+        <div>
+          <textarea
+            name="message"
+            id="message"
+            cols="30"
+            rows="10"
+            placeholder="Message"
+          ></textarea>
+        </div>
+        <div>
+          <button class="btn-submit">Send Message</button>
+        </div>
+      </form>
+    </div>
+
+    <div class="contact-right">
+      <div class="contact-item">
+        <div class="contact-item-icon">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="22"
+            height="22"
+            viewBox="0 0 24 24"
+          >
+            <path
+              d="M12 1c-3.148 0-6 2.553-6 5.702 0 3.148 2.602 6.907 6 12.298 3.398-5.391 6-9.15 6-12.298 0-3.149-2.851-5.702-6-5.702zm0 8c-1.105 0-2-.895-2-2s.895-2 2-2 2 .895 2 2-.895 2-2 2zm12 14h-24l4-8h3.135c.385.641.798 1.309 1.232 2h-3.131l-2 4h17.527l-2-4h-3.131c.435-.691.848-1.359 1.232-2h3.136l4 8z"
+            />
+          </svg>
+        </div>
+        <div class="contact-item-detail">
+          <h4>Address</h4>
+          <p>3424 Layman Avenue, Fayetteville, NC</p>
         </div>
       </div>
-      <div class="contact-right">
-        <!-- Contact 1 -->
-        <div class="contact-item">
-          <div class="contact-item-icon">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-            >
-              <path
-                d="M12 0c-3.148 0-6 2.553-6 5.702 0 4.682 4.783 5.177 6 12.298 1.217-7.121 6-7.616 6-12.298 0-3.149-2.851-5.702-6-5.702zm0 8c-1.105 0-2-.895-2-2s.895-2 2-2 2 .895 2 2-.895 2-2 2zm12 16l-6.707-2.427-5.293 2.427-5.581-2.427-6.419 2.427 4-9 3.96-1.584c.38.516.741 1.08 1.061 1.729l-3.523 1.41-1.725 3.88 2.672-1.01 1.506-2.687-.635 3.044 4.189 1.789.495-2.021.465 2.024 4.15-1.89-.618-3.033 1.572 2.896 2.732.989-1.739-3.978-3.581-1.415c.319-.65.681-1.215 1.062-1.731l4.021 1.588 3.936 9z"
-              />
-            </svg>
-          </div>
-          <div class="contact-item-detail">
-            <h4>Address</h4>
-            <p>Kp. Kelo Asasa</p>
-          </div>
+
+      <div class="contact-item">
+        <div class="contact-item-icon">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="22"
+            height="22"
+            viewBox="0 0 24 24"
+          >
+            <path
+              d="M20 22.621l-3.521-6.795c-.008.004-1.974.97-2.064 1.011-2.24 1.086-6.799-7.82-4.609-8.994l2.083-1.026-3.493-6.817-2.106 1.039c-7.202 3.755 4.233 25.982 11.6 22.615.121-.055 2.102-1.029 2.11-1.033z"
+            />
+          </svg>
         </div>
-        <!-- Contact 2 -->
-        <div class="contact-item">
-          <div class="contact-item-icon">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-            >
-              <path
-                d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm3.445 17.827c-3.684 1.684-9.401-9.43-5.8-11.308l1.053-.519 1.746 3.409-1.042.513c-1.095.587 1.185 5.04 2.305 4.497l1.032-.505 1.76 3.397-1.054.516z"
-              />
-            </svg>
-          </div>
-          <div class="contact-item-detail">
-            <h4>Tellphone</h4>
-            <p>+62 813-112-8263</p>
-          </div>
+        <div class="contact-item-detail">
+          <h4>Phone</h4>
+          <p>(501) 414-1541</p>
         </div>
-        <!-- Contact 3 -->
-        <div class="contact-item">
-          <div class="contact-item-icon">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-            >
-              <path
-                d="M12 .02c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6.99 6.98l-6.99 5.666-6.991-5.666h13.981zm.01 10h-14v-8.505l7 5.673 7-5.672v8.504z"
-              />
-            </svg>
-          </div>
-          <div class="contact-item-detail">
-            <h4>Email</h4>
-            <p>admin@lanzzstore.com</p>
-          </div>
+      </div>
+
+      <div class="contact-item">
+        <div class="contact-item-icon">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="22"
+            height="22"
+            viewBox="0 0 24 24"
+          >
+            <path
+              d="M0 3v18h24v-18h-24zm21.518 2l-9.518 7.713-9.518-7.713h19.036zm-19.518 14v-11.817l10 8.104 10-8.104v11.817h-20z"
+            />
+          </svg>
+        </div>
+        <div class="contact-item-detail">
+          <h4>Email</h4>
+          <p>dummyemail@gmail.com</p>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
