--- a/views/partials/hero.ejs
+++ b/views/partials/hero.ejs
@@ -1,19 +1,15 @@
 <section id="hero">
   <div class="hero-left">
-    <h3 class="pre-title" data-aos="fade-right" data-aos-delay="100">
-      My Name Is
-    </h3>
-    <h1 class="hero-name" data-aos="fade-right">
-      Muhamad <span>Fadhlan</span>
-    </h1>
-    <p data-aos="fade-right">
-      Creative BackEnd Devoloper Lorem ipsum, dolor sit amet consectetur
-      adipisicing elit. Ex alias impedit blanditiis accusantium fugit quam
-      aliquam architecto eveniet reprehenderit placeat, vero non porro voluptas
-      magnam quae quas vel aliquid deleniti.
+    <h3 class="pre-title">My name is</h3>
+    <h1 class="hero-name">Muhamad <span>Fadhlan</span></h1>
+    <p>
+      Creative front-end developer with more than +5 years of experience
+      in enterprise companies and startups. Proficient in Javascript and
+      React. Passionate about UI/UX.
     </p>
   </div>
-  <div class="hero-right" data-aos="zoom-in" data-aos-duration="2000">
+
+  <div class="hero-right">
     <img src="/images/hero.svg" alt="Person Standing" />
   </div>
 </section>
