--- a/views/partials/contact.ejs
+++ b/views/partials/contact.ejs
@@ -1,5 +1,6 @@
 <section id="contact">
   <div class="contact main-container">
+    <h2 class="pre-title">Contact Me</h2>
     <div class="contact-left">
       <form
         action="https://formspree.io/f/xeqwdykj"
