--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/responsive.css" />
-    <title>Dimas Abimanyu - Software Engineer</title>
+    <title>Muhamad Fadhlan - Software Engineer</title>
   </head>
   <body>
     <!-- Header -->
